--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 <link rel="stylesheet" href="custom.css">
 </head>
     <meta charset="UTF-8">
-    <title>My Rust + Webpack project!</title>
+    <title>1ms.ai</title>
   </head>
   <body>
     <script src="index.js"></script>
+    <h2><a href="/">1ms.ai</a><e> is starting!</e></h2>
   </body>
 </html>
