--- a/index.html
+++ b/index.html
@@ -2,13 +2,40 @@
 <html>
   <head>
     <head>
-<link rel="stylesheet" href="custom.css">
-</head>
-    <meta charset="UTF-8">
+      <link rel="stylesheet" href="custom.css" />
+    </head>
+    <meta charset="UTF-8" />
     <title>1ms.ai</title>
   </head>
   <body>
-    <script src="index.js"></script>
-    <h2><a href="/">1ms.ai</a><e> is starting!</e></h2>
+    <h1><a href="/">1ms.ai</a></h1>
+    <h2>What is 1ms.ai?</h2>
+
+    <p>
+      1ms.ai is a startup company aiming at reducing inefficiencies at every
+      step of the creation of AI applications!
+    </p>
+
+    <p>
+      Firmly believing that we can measure inefficiencies/bloat by the latency
+      and celerity of process, our goal is to maximise performance of AI system:
+    </p>
+
+    <p>We currently are proud of our two products:</p>
+
+    <ul>
+      <li><a href="https://github.com/dora-rs/dora">dora-rs</a></li>
+      <li><a href="https://github.com/webonnx/wonnx">wonnx</a></li>
+    </ul>
+
+    <p>We currently have two job openings at:</p>
+
+    <ul>
+      <li>
+        <a href="./internship.html"
+          >Software Engineer Internship or Apprenticeship</a
+        >
+      </li>
+    </ul>
   </body>
 </html>
