--- a/index.html
+++ b/index.html
@@ -37,5 +37,10 @@
         >
       </li>
     </ul>
+
+    <small>
+      This page is also in <a href="/fr">french</a> and
+      <a href="/cn">中文</a></small
+    >
   </body>
 </html>
