--- a/internship.html
+++ b/internship.html
@@ -8,8 +8,6 @@
   <body>
     <h1><a href="/">1ms.ai</a></h1>
 
-    <h2>Internship/Apprenticeship Opportunity at 1ms.ai</h2>
-
     <h3>About the Internship/Apprenticeship</h3>
     <p>
       Join our team at 1ms.ai for a rewarding experience with tons of learning
@@ -60,6 +58,11 @@
       <a href="mailto:tao.xavier@outlook.com">tao.xavier@outlook.com</a> with
       the subject line "Internship/Apprenticeship Application".
     </p>
+
+    <small>
+      This page is also in <a href="/fr/internship">french</a> and
+      <a href="/cn/internship">中文</a></small
+    >
 
     <p>
       <a href="/">&lt; Go back</a>
