--- a/cn/internship.html
+++ b/cn/internship.html
@@ -8,6 +8,8 @@
   <body>
     <h1><a href="/">1ms.ai</a></h1>
 
+    <h2>Opportunité de Stage ou Alternance</h2>
+
     <h3>À propos du Stage ou Alternance</h3>
     <p>
       Rejoignez notre équipe chez 1ms.ai pour une expérience enrichissante avec
