--- a/fr/index.html
+++ b/fr/index.html
@@ -30,7 +30,9 @@
     <h2>Offres d'Emploi Actuelles</h2>
     <ul>
       <li>
-        <a href="./internship">Stage ou Alternance en Ingénierie Logicielle</a>
+        <a href="/fr/internship.html"
+          >Stage ou Alternance en Ingénierie Logicielle</a
+        >
       </li>
     </ul>
   </body>
