--- a/fr/internship.html
+++ b/fr/internship.html
@@ -2,13 +2,11 @@
 <html>
   <head>
     <link rel="stylesheet" href="/custom.css" />
-    <title>Opportunité de Stage ou Alternance 1ms.ai</title>
+    <title>Stage ou Alternance Ingénierie Logicielle 1ms.ai</title>
     <meta charset="UTF-8" />
   </head>
   <body>
     <h1><a href="/">1ms.ai</a></h1>
-
-    <h2>Opportunité de Stage ou Alternance</h2>
 
     <h3>À propos du Stage ou Alternance</h3>
     <p>
