--- a/cn/internship.html
+++ b/cn/internship.html
@@ -2,69 +2,110 @@
 <html>
   <head>
     <link rel="stylesheet" href="/custom.css" />
-    <title>Opportunité de Stage ou Alternance 1ms.ai</title>
+    <title>1ms.ai实习或学徒机会</title>
     <meta charset="UTF-8" />
   </head>
   <body>
-    <h1><a href="/">1ms.ai</a></h1>
+    <h1><a href="/cn">1ms.ai</a></h1>
 
-    <h2>Opportunité de Stage ou Alternance</h2>
-
-    <h3>À propos du Stage ou Alternance</h3>
+    <h3>关于软件工程实习或学徒项目</h3>
     <p>
-      Rejoignez notre équipe chez 1ms.ai pour une expérience enrichissante avec
-      beaucoup d'apprentissage sur LLM, AI, Python et Rust ! Nous recherchons
-      des individus enthousiastes et talentueux pour contribuer à
-      <a href="https://github.com/dora-rs/dora">dora-rs</a> ! Cette opportunité
-      sera centrée autour d'un projet à mettre en œuvre du début à la fin !
+      加入我们1ms.ai的团队！我们正在寻找才华横溢的人才，为
+      <a href="https://github.com/dora-rs/dora">dora-rs</a>贡献力量！这次机会
+      将围绕一个从头到尾实施的人工智能/LLM项目。
+    </p>
+    <p>
+      <a href="https://lilianweng.github.io/posts/2023-06-23-agent/">LLM代理</a>提供了编程可能是什么样子的新视角，我们迫不及待地想在
+       实时机器人上试用它。我们相信，通过使用LLM的力量，我们可以构建出非常智能的机器。
     </p>
 
-    <h4>Projets possibles</h4>
+    <h4>项目</h4>
     <ul>
-      <li>Construire des agents LLM pouvant contrôler un Bot Minecraft !</li>
-      <li>Construire des agents LLM pouvant contrôler un DJI Robomaster !</li>
+      <li>构建LLM来控制Minecraft机器人！</li>
+      <li>构建LLM来控制小型漫游车！</li>
+      <li>构建一个自动调试器，能够修正Python中的简单错误。</li>
       <li>
-        Construire un auto-débogueur capable de corriger des erreurs simples en
-        python.
-      </li>
-      <li>
-        Construire un modificateur de code capable de générer du code pour
-        modifier une base de code.
+        构建一个代码修改器，能够生成代码来修改代码库。
       </li>
     </ul>
+    <ul class="card-list">
+      <li class="card">
+        <video
+          src="/robomaster.mp4"
+          type="video/mp4"
+          controls
+          preload="metadata"
+        ></video>
 
-    <h4>Ce que vous apprendrez</h4>
-    <ul>
-      <li>Mise en œuvre des agents LLM.</li>
-      <li>
-        Ingénierie logicielle Python et Rust encadrée par des développeurs Open
-        Source Rockstar.
+        <div class="card-content">
+          <small><em>DJI Robomaster</em></small>
+        </div>
       </li>
-      <li>Développement de logiciels Open Source.</li>
+      <li class="card">
+        <video
+          src="https://github.com/MineDojo/Voyager/assets/25460983/ce29f45b-43a5-4399-8fd8-5dd105fd64f2"
+          type="video/mp4"
+          controls
+          preload="metadata"
+        ></video>
+
+        <div class="card-content">
+          <small><em>Minecraft旅行者</em></small>
+        </div>
+      </li>
+
+      <li class="card">
+        <video
+          src="/code_modifier.mp4"
+          type="video/mp4"
+          controls
+          preload="metadata"
+        ></video>
+
+        <div class="card-content">
+          <small>
+            <em>使用Mistral的实时代码修改</em>
+          </small>
+      </li>
     </ul>
 
-    <h4>Exigences</h4>
+    <h4>此职位的优势</h4>
     <ul>
-      <li>Étudier en Informatique, Mathématiques ou un domaine connexe.</li>
-      <li>Expériences en développement logiciel : git, python, linux...</li>
-      <li>Intérêt pour LLM et AI.</li>
+      <li>实施LLM代理。</li>
+      <li>开源软件开发。</li>
+      <li>
+        由开源界的摇滚明星提供指导: <a href="https://github.com/phil-opp">@phil-opp</a>, <a href="https://github.com/haixuanTao">@haixuanTao</a>, ...
+      </li>
     </ul>
 
-    <h4>Durée et Lieu</h4>
+    <h4>要求</h4>
     <ul>
-      <li>Durée : 6 mois pour le stage et 1-2 ans pour l'apprentissage</li>
-      <li>Lieu : Paris (Spaces Coworking) / À distance</li>
+      <li>计算机科学、数学或相关领域的学生。</li>
+      <li>软件开发经验：git, python, linux</li>
+      <li>对LLM和人工智能感兴趣。</li>
+      <li>Good English</li>
     </ul>
 
-    <h4>Comment postuler</h4>
+    <h4>持续时间和地点</h4>
+    <ul>
+      <li>
+        期限：实习6个月，学徒1-2年
+      </li>
+      <li>地点：巴黎（Spaces共享办公室）/ 远程</li>
+    </ul>
+
+    <h4>如何申请</h4>
     <p>
-      Veuillez envoyer votre CV et une brève lettre de motivation à
-      <a href="mailto:tao.xavier@outlook.com">tao.xavier@outlook.com</a> avec la
-      ligne d'objet "Candidature Stage/Apprentissage".
+      请将您的简历和简短的求职信发送至
+      <a href="mailto:tao.xavier@outlook.com">tao.xavier@outlook.com</a>，邮件主题为“实习或学徒申请”。
     </p>
 
+    <small>
+      本页面也有<a href="/fr/internship.html">法文版</a>和
+      <a href="/cn/internship.html">中文版</a></small
+    >
     <p>
-      <a href="/">&lt; Retour</a>
+      <a href="/cn">&lt; 返回</a>
     </p>
   </body>
 </html>
