--- a/fr/internship.html
+++ b/fr/internship.html
@@ -2,67 +2,110 @@
 <html>
   <head>
     <link rel="stylesheet" href="/custom.css" />
-    <title>Stage ou Alternance Ingénierie Logicielle 1ms.ai</title>
+    <title>Opportunité de Stage ou Alternance chez 1ms.ai</title>
     <meta charset="UTF-8" />
   </head>
   <body>
-    <h1><a href="/">1ms.ai</a></h1>
+    <h1><a href="/fr">1ms.ai</a></h1>
 
-    <h3>À propos du Stage ou Alternance</h3>
+    <h3>À propos du Stage ou Alternance en ingénierie logicielle</h3>
     <p>
-      Rejoignez notre équipe chez 1ms.ai pour une expérience enrichissante avec
-      beaucoup d'apprentissage sur LLM, AI, Python et Rust ! Nous recherchons
-      des individus enthousiastes et talentueux pour contribuer à
-      <a href="https://github.com/dora-rs/dora">dora-rs</a> ! Cette opportunité
-      sera centrée autour d'un projet à mettre en œuvre du début à la fin !
+      Rejoignez notre équipe chez 1ms.ai! Nous recherchons des talents pour contribuer à
+      <a href="https://github.com/dora-rs/dora">dora-rs</a>! Cette opportunité
+      sera centrée autour d'un projet IA/LLM à implémenter de A à Z.
+    </p>
+    <p>
+      <a href="https://lilianweng.github.io/posts/2023-06-23-agent/">Les agents LLM</a> offrent une nouvelle vision de ce que pourrait être la programmation, et nous sommes impatients de l'essayer
+       sur un robot en temps réel. Nous croyons qu'en utilisant la puissance du LLM, nous pouvons construire des machines exceptionnellement intelligents.
     </p>
 
-    <h4>Projets possibles</h4>
+    <h4>Projets</h4>
     <ul>
-      <li>Construire des agents LLM pouvant contrôler un Bot Minecraft !</li>
-      <li>Construire des agents LLM pouvant contrôler un DJI Robomaster !</li>
+      <li>Construire des LLMs pour contrôler un Bot Minecraft!</li>
+      <li>Construire des LLMs pour contrôler un petit rover!</li>
+      <li>Construire un auto-débogueur capable de corriger des erreurs simples en Python.</li>
       <li>
-        Construire un auto-débogueur capable de corriger des erreurs simples en
-        python.
+        Construire un modificateur de code capable de générer du code pour modifier une base de code.
       </li>
-      <li>
-        Construire un modificateur de code capable de générer du code pour
-        modifier une base de code.
+    </ul>
+    <ul class="card-list">
+      <li class="card">
+        <video
+          src="/robomaster.mp4"
+          type="video/mp4"
+          controls
+          preload="metadata"
+        ></video>
+
+        <div class="card-content">
+          <small><em>DJI Robomaster</em></small>
+        </div>
+      </li>
+      <li class="card">
+        <video
+          src="https://github.com/MineDojo/Voyager/assets/25460983/ce29f45b-43a5-4399-8fd8-5dd105fd64f2"
+          type="video/mp4"
+          controls
+          preload="metadata"
+        ></video>
+
+        <div class="card-content">
+          <small><em>Voyageur Minecraft</em></small>
+        </div>
+      </li>
+
+      <li class="card">
+        <video
+          src="/code_modifier.mp4"
+          type="video/mp4"
+          controls
+          preload="metadata"
+        ></video>
+
+        <div class="card-content">
+          <small>
+            <em>Modification de code en temps réel avec Mistral</em>
+          </small>
       </li>
     </ul>
 
-    <h4>Ce que vous apprendrez</h4>
+    <h4>Les plus de cette offres</h4>
     <ul>
       <li>Mise en œuvre des agents LLM.</li>
-      <li>
-        Ingénierie logicielle Python et Rust encadrée par des développeurs Open
-        Source Rockstar.
-      </li>
       <li>Développement de logiciels Open Source.</li>
+      <li>
+        Mentoring par des Rockstars de l'Open Source: <a href="https://github.com/phil-opp">@phil-opp</a>, <a href="https://github.com/haixuanTao">@haixuanTao</a>, ...
+      </li>
     </ul>
 
     <h4>Exigences</h4>
     <ul>
-      <li>Étudier en Informatique, Mathématiques ou un domaine connexe.</li>
+      <li>Etudiant en informatique, mathématiques ou domaine similaire.</li>
       <li>Expériences en développement logiciel : git, python, linux...</li>
-      <li>Intérêt pour LLM et AI.</li>
+      <li>Intérêt pour LLM et IA.</li>
     </ul>
 
-    <h4>Durée et Lieu</h4>
+    <h4>Durée et localisation</h4>
     <ul>
-      <li>Durée : 6 mois pour le stage et 1-2 ans pour l'apprentissage</li>
-      <li>Lieu : Paris (Spaces Coworking) / À distance</li>
+      <li>
+        Durée : 6 mois pour le stage et 1-2 ans pour alternance
+      </li>
+      <li>Lieu : Paris (Spaces Coworking) / Remote</li>
     </ul>
 
     <h4>Comment postuler</h4>
     <p>
       Veuillez envoyer votre CV et une brève lettre de motivation à
-      <a href="mailto:tao.xavier@outlook.com">tao.xavier@outlook.com</a> avec la
-      ligne d'objet "Candidature Stage/Apprentissage".
+      <a href="mailto:tao.xavier@outlook.com">tao.xavier@outlook.com</a> avec
+      la ligne d'objet "Candidature de Stage ou Alternance".
     </p>
 
+    <small>
+      Cette page est également disponible en <a href="/fr/internship.html">français</a> et
+      <a href="/cn/internship.html">中文</a></small
+    >
     <p>
-      <a href="/">&lt; Retour</a>
+      <a href="/fr">&lt; Revenir</a>
     </p>
   </body>
 </html>
