--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <li><a href="https://github.com/webonnx/wonnx">wonnx</a></li>
     </ul>
 
-    <p>We currently have two job openings at:</p>
+    <p>We currently have one job openings at:</p>
 
     <ul>
       <li>
