--- a/internship.html
+++ b/internship.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="custom.css" />
+    <link rel="stylesheet" href="/custom.css" />
     <title>Internship/Apprenticeship Opportunity at 1ms.ai</title>
     <meta charset="UTF-8" />
   </head>
@@ -16,6 +16,10 @@
       <a href="https://github.com/dora-rs/dora">dora-rs</a>! This opportunity
       will be centered around a project to implement from beginning to the end!
     </p>
+    <p>
+      <a href="https://lilianweng.github.io/posts/2023-06-23-agent/">LLM agents</a> provides a new vision of what coding might be, and we're eager to try it
+       on robot in real time. We believe that by using the power of LLM, we can build exceptionally capable machine.
+    </p>
 
     <h4>Projects</h4>
     <ul>
@@ -26,43 +30,6 @@
         Build a code modifier that can generate code to modify a codebase.
       </li>
     </ul>
-
-    <h4>What You Will Learn</h4>
-    <ul>
-      <li>LLM agents implementation.</li>
-      <li>
-        Python and Rust software engineering mentored by Rockstar Open Source
-        Developers.
-      </li>
-      <li>Open Source software development.</li>
-    </ul>
-
-    <h4>Requirements</h4>
-    <ul>
-      <li>Studying Computer Science, Math or related field.</li>
-      <li>Experiences in Software Development: git, python, linux...</li>
-      <li>Interest for LLM and AI.</li>
-    </ul>
-
-    <h4>Duration and Location</h4>
-    <ul>
-      <li>
-        Duration: 6 months for Internship and 1-2 Years for Apprenticeship
-      </li>
-      <li>Location: Paris (Spaces Coworking) / Remote</li>
-    </ul>
-
-    <h4>How to Apply</h4>
-    <p>
-      Please send your resume and a brief cover letter to
-      <a href="mailto:tao.xavier@outlook.com">tao.xavier@outlook.com</a> with
-      the subject line "Internship/Apprenticeship Application".
-    </p>
-
-    <small>
-      This page is also in <a href="/fr/internship">french</a> and
-      <a href="/cn/internship">中文</a></small
-    >
     <ul class="card-list">
       <li class="card">
         <video
@@ -99,11 +66,48 @@
 
         <div class="card-content">
           <small>
-            <em>Real Time code modification in natural language</em>
+            <em>Real Time code modification using Mistral</em>
           </small>
-        </div          <em>Real Time code modification in natural language</em>>
       </li>
     </ul>
+
+    <h4>What You Will Learn</h4>
+    <ul>
+      <li>LLM agents implementation.</li>
+      <li>Open Source software development.</li>
+      <li>
+        Mentoring by Rockstar Open Source
+        Developers: <a href="https://github.com/phil-opp">@phil-opp</a>, <a href="https://github.com/haixuanTao">@haixuanTao</a>, ...
+
+      </li>
+    </ul>
+
+    <h4>Requirements</h4>
+    <ul>
+      <li>Studying Computer Science, Math or related field.</li>
+      <li>Experiences in Software Development: git, python, linux...</li>
+      <li>Interest for LLM and AI.</li>
+    </ul>
+
+    <h4>Duration and Location</h4>
+    <ul>
+      <li>
+        Duration: 6 months for Internship and 1-2 Years for Apprenticeship
+      </li>
+      <li>Location: Paris (Spaces Coworking) / Remote</li>
+    </ul>
+
+    <h4>How to Apply</h4>
+    <p>
+      Please send your resume and a brief cover letter to
+      <a href="mailto:tao.xavier@outlook.com">tao.xavier@outlook.com</a> with
+      the subject line "Internship/Apprenticeship Application".
+    </p>
+
+    <small>
+      This page is also in <a href="/fr/internship">french</a> and
+      <a href="/cn/internship">中文</a></small
+    >
     <p>
       <a href="/">&lt; Go back</a>
     </p>
